# ggez-mandel

./: .project_alt.json  Cargo.toml  run.sh
benches1/: my_benchmark.rs
src/: constants.rs  lib.rs  main.rs  multi.rs  my_benchmark.rs  opencl.rs  renderer.rs  simd.rs  single.rs
