[package]
name = "ggez_mandel"
version = "0.1.0"
authors = ["Andrey <otbacmhe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "*"
rayon = "*"
num = "*"
GSL = "1.1"
packed_simd = "*"
ocl = "*"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
path = "./src/my_benchmark.rs"

[target.'cfg(target_arch = "x86_64")'.dependencies.sleef-sys]
version = "^0.1.2"
optional = true

[features]
default = [ "256bit" ]
256bit = []
